# dukaan-saathi

./: .dockerignore  .env.example  .gitignore  Dockerfile  INTERFACE.md  README.md  blog.html  design.md  pyproject.toml  revision.md
data/: inventory.db  transactions.db
docs/: blog_field_notes.md  changes-and-next-steps.md  deploy-runbook.md  discord-query.md  final_report.md  hackathon-scorecard.md  social_post.md  sponsor-models.md
docs/report/: build_final_report.py  build_report.py  report.css  report.html
docs/revision/: build_revision_pdf.py
dukaan/: __init__.py  agent.py  app.py  audio_cache.py  catalog.py  config.py  db.py  i18n.py  llm.py  normalize.py  numwords.py  onboarding.py  ops.py  proactive.py  receiving.py  resolve.py  seed_inventory.py  seed_ledger.py  session.py  shelf_life.py  staging.py  stt.py  surya.py  tools.py  tts.py
dukaan/assets/: head.html  style.css
dukaan/data/: festival_overrides.json
figures/: dukaan_final.drawio
scripts/: _verify_uifixes.py  download_models.sh  e2e_check.py  e2e_full.py  e2e_full.sbatch  e2e_gpu.sbatch  export_trace.py  modal_app.py  modal_llama.py  prewarm.py  run.sbatch  run_local.sh  serve_llm.sh  space_entrypoint.sh  tts_eval.sbatch  tts_parler_eval.py  tts_parler_eval.sbatch  tts_veena_eval.py
tasks/: lessons.md  todo.md
tests/: conftest.py  test_audio_cache.py  test_db.py  test_festival_intent.py  test_lots_fefo.py  test_numwords.py  test_onboarding.py  test_ops.py  test_receiving.py  test_resolve.py  test_session.py  test_session_confirm.py  test_smoke_e2e.py  test_tools.py
